// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExternalLink /> should render 1`] = `
.c0 {
  color: rgb(90, 94, 0);
  text-decoration: none;
}

.c0 :hover,
.c0 :active {
  text-decoration: underline;
}

<a
  class="c0 "
  href="https://github.com/lapanti"
  rel="jotain hassua noopener noreferrer"
  target="_blank"
  title="title"
>
  children
</a>
`;

exports[`<ExternalLink /> should render minimal 1`] = `
.c0 {
  color: rgb(90, 94, 0);
  text-decoration: none;
}

.c0 :hover,
.c0 :active {
  text-decoration: underline;
}

<a
  class="c0 "
  href="https://github.com/lapanti"
  rel=" noopener noreferrer"
  target="_blank"
>
  children
</a>
`;
